--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+server.servlet.context-path=/api
 
+spring.liquibase.enabled=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+jwt.expiration=300000
+jwt.secret=secretsecretsecretsecretsecretsecret
