--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -11,3 +11,7 @@ databaseChangeLog:
       file : db/changelog/changes/05-insert-roles-into-roles-table.yaml
   - include:
       file : db/changelog/changes/06-fill-users-roles-table.yaml
+  - include:
+      file : db/changelog/changes/07-create-categories-table.yaml
+  - include:
+      file : db/changelog/changes/08-create-books-categories-table.yaml
