--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,5 +6,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.liquibase.enabled=true
 
-jwt.expiration=300000
+jwt.expiration=30000000000
 jwt.secret=secretsecretsecretsecretsecretsecret
