--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/book_store?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=12345678
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=true
+spring.jpa.open-in-view=false
 server.servlet.context-path=/api
-
-spring.liquibase.enabled=true
-spring.jackson.deserialization.fail-on-unknown-properties=true
 
 jwt.expiration=300000
 jwt.secret=secretsecretsecretsecretsecretsecret
