--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -19,3 +19,7 @@ databaseChangeLog:
       file : db/changelog/changes/09-create-orders-table.yaml
   - include:
       file : db/changelog/changes/10-create-order-items-table.yaml
+  - include:
+      file : db/changelog/changes/11-fill-users-table.yaml
+  - include:
+      file : db/changelog/changes/12-assign-role-to-admin.yaml
